add project page

--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -35,6 +35,8 @@ base_path: "/my-site" # the subpath of your site, e.g. /blog. If you set this op
 collections:
   projects:
     output: true
+    tags:
+      output: true
   communities:
     output: true
   presentations:
