--- a/bridgetown.config.yml
+++ b/bridgetown.config.yml
@@ -17,7 +17,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 #
 
-url: "https://stephanieawilkinson.com" # the base hostname & protocol for your site, e.g. https://example.com
+url: "https://stephaniewilkinson.github.io" # the base hostname & protocol for your site, e.g. https://example.com
 
 permalink: pretty
 template_engine: erb
